overflow fix

--- a/index-style.css
+++ b/index-style.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Special Gothic", sans-serif;
+  overflow-x: hidden;
 }
 .body {
   position: relative;
